--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="game"></div>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.js?v=20251022"></script>
   </body>
 </html>
